Add no-flatten option